--- a/serverless-api/app/static/chat.html
+++ b/serverless-api/app/static/chat.html
@@ -12,11 +12,6 @@
 	<script src="/chat.js"></script>
 
 	<style>
-		#messages {
-			height: 60vh;
-			overflow-y: scroll;
-		}
-
 		.chat-img {
 			border-radius: 50%;
 			overflow: hidden;
@@ -30,10 +25,23 @@
 			height: 100%;
 			object-fit: cover;
 		}
+
+		.full-screen {
+			height: 100vh;
+		}
+
+		.content {
+			overflow-y: scroll;
+		}
+
+		.input-group {
+			padding-bottom: 16px;
+		}
+
 	</style>
 </head>
 
-<body class="container content">
+<body>
 
 	<template id="message-template-in">
 		<li class="in">
@@ -63,26 +71,25 @@
 		</li>
 	</template>
 
-	<div class="row">
-		<div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-			<div class="card">
-				<div class="card-header">Chat</div>
-				<div class="card-body height3">
-					<ul id="messages" class="chat-list"></ul>
-				</div>
-				<div id="input" class="input-group">
-					<input type="text" id="messageInput" class="form-control" placeholder="Type your message here" />
-					<div class="input-group-append">
-						<button class="btn btn-primary" onclick="sendMessage()">Send</button>
-					</div>
-				</div>
+	<div class="container-fluid full-screen d-flex flex-column">
+
+		<div class="content flex-grow-1">
+			<ul id="messages" class="chat-list"></ul>
+		</div>
+
+		<div id="input" class="input-group">
+			<input type="text" id="messageInput" class="form-control" placeholder="Type your message here" />
+			<div class="input-group-append">
+				<button class="btn btn-primary" onclick="sendMessage()">Send</button>
 			</div>
 		</div>
+
 	</div>
 
 	<script>
 		subscribe();
 		fetchMessages();
+		setInterval(fetchMessages, 30000);
 	</script>
 
 </body>
